# CTCtrl

./: .gitignore  README.md  前台功能.eddx  前台页面结构.html  后台功能.xmind  软件页面.eddx
CrossTime/: CMakeLists.txt  CrossTime.sln  main.cpp
CrossTime/CrossTime/: CTCtrlFunction.cpp  CrossTime.vcxproj  CrossTime.vcxproj.filters  CrossTimeServer.cpp  CrossTimeServer.h  Crypto.h  DBHelper.h  FilesServer.cpp  HttpParser.cpp  HttpParser.h  Packet.h  Process.h  Public.h  Tools.h  WebSocket.cpp  main.cpp
CrossTime/CrossTime/logger/: Atomic.h  Date.cc  Date.h  Exception.cc  FileUtil.h  LogStream.h  Logging.h  StringPiece.h  TimeZone.cc  Timestamp.h
CrossTime/crypto/: CMakeLists.txt
CrossTime/db/: DBHelper.h
CrossTime/epoll/: CTCtrlEpoll.cpp
CrossTime/fileserver/: CMakeLists.txt  FilesServer.cpp
CrossTime/http/: CMakeLists.txt
CrossTime/logger/: Condition.cc  Exception.h  FileUtil.cc  Thread.cc  Thread.h  Timestamp.cc  copyable.h
CrossTime/process/: CMakeLists.txt
CrossTime/public/: CMakeLists.txt  Public.h
CrossTime/thread/: CMakeLists.txt  CTCtrlFunction.h  CTCtrlThreadPool.h
CrossTime/webserver/: CMakeLists.txt  CrossTimeServer.cpp  CrossTimeServer.h
beCtrlServer/: CTCtrl协议.rtf  beCtrlServer.sln
beCtrlServer-cmake/: main.cpp
beCtrlServer-cmake/crypto/: Crypto.cpp
beCtrlServer-cmake/db/: CMakeLists.txt  DBHelper.cpp
beCtrlServer-cmake/epoll/: CMakeLists.txt  CTCtrlEpoll.h
beCtrlServer-cmake/fileserver/: FilesServer.h
beCtrlServer-cmake/http/: HttpParser.h
beCtrlServer-cmake/jsoncpp/: CMakeLists.txt
beCtrlServer-cmake/logger/: CMakeLists.txt  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  LogFile.cc  LogFile.h  LogStream.cc  Logging.cc  Mutex.h  ProcessInfo.cc  ProcessInfo.h  TimeZone.h  Types.h
beCtrlServer-cmake/process/: Process.h
beCtrlServer-cmake/public/: Tools.h
beCtrlServer-cmake/thread/: CTCtrlThread.cpp  CTCtrlThread.h  CTCtrlThreadPool.cpp
beCtrlServer-cmake/websocket/: CMakeLists.txt  WebSocket.cpp  WebSocket.h
beCtrlServer/beCtrlServer/: Command.cpp  Command.h  DesktopNotificationManagerCompat.cpp  DesktopNotificationManagerCompat.h  HttpParser.cpp  HttpParser.h  MainDlg.cpp  MainDlg.h  Packet.h  Public.h  SettingDlg.cpp  SettingDlg.h  Socket.h  SysTray.cpp  SysTray.h  ToastHandler.cpp  ToastHandler.h  Tools.h  UserConfigInfo.cpp  UserConfigInfo.h  WebSocket.cpp  WebSocket.h  beCtrlServer.aps  beCtrlServer.cpp  beCtrlServer.rc  beCtrlServer.vcxproj  beCtrlServer.vcxproj.filters  framework.h  libboost_random-vc142-mt-gd-x64-1_83.lib  libboost_random-vc142-mt-x64-1_83.lib  memory_leak_report.txt  packages.config  pch.h  resource.h
beCtrlServer/beCtrlServer/jsoncpp/: json.h
beCtrlServer/beCtrlServer/opencv2/: opencv.hpp
beCtrlServer/setup/: CTCtrl-beCtrl.aip
cross-time-web/: .env.development  .env.production  .env.test  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
cross-time-web/pingweidist/: index.html
cross-time-web/pingweidist/assets/: about-CgjwYGrM.js  home-BQ6SLRyk.js  index-2bWTvhk3.js  index-B9g2TYEn.js  index-BNpe97jV.js  index-BURIlRxl.js  index-Bo-QJ1YU.css  index-BqIDgmBb.css  index-BvLKd0B6.js  index-BxFGf8qU.css  index-C3NFE4kg.js  index-CQre3nJR.js  index-Cm8TJp2S.js  index-Cy6Oq0OJ.js  index-D2Kbt3f9.js  index-D4ryUWy7.js  index-DDTkiGmt.js  index-DEu3z34b.css  index-DFkeTmyf.css  index-DN1C6z8Z.js  index-Df5VxGMb.css  index-ONIOKyup.js  index-rDLAFkKx.js  notice-BAoNAYts.js  requestScreen-lax8Pm0l.js  vendor-Dj-i8j__.js
cross-time-web/src/: main.ts  permisson.ts  vite-env.d.ts
cross-time-web/src/components/: index.ts
cross-time-web/src/layout/: index.vue
cross-time-web/src/router/: index.ts  routes.ts
cross-time-web/src/store/: index.ts
cross-time-web/src/styles/: home.ts  variable.scss
cross-time-web/src/utils/: ip.ts  limitCtrl.ts  request.ts  requestScreen.ts  setting.ts  throttle.ts  validatePhone.ts
cross-time-web/zijidist/: index.html
cross-time-web/zijidist/assets/: about-ClXOJXGw.js  home-CuY75UnJ.js  index-87y6nbM4.js  index-9hcVElAv.js  index-BD_SQRY8.js  index-BETqRdt_.js  index-BXLwJrvQ.css  index-BgE4lAM9.css  index-BiAO72U2.css  index-BlqLMa93.js  index-CJltxdri.css  index-CPIxV_Dt.js  index-CPX-bVHQ.js  index-CZSEuWVy.js  index-ClhuT2dp.css  index-CvPYVPjr.js  index-D92Lk5ds.js  index-DNuraWeX.css  index-DO3L9RwN.css  index-DOAMSQgi.js  index-DZsz8q_u.js  index-Dujhjhef.css  index-Dxt9Wruo.js  index-Gf-syR_m.js  index-qxZPit0M.js  logo-uK8Pg4jY.js  notice-DzbK6k4h.js  requestScreen-CAxOcCZe.js  vendor-CFspaVTt.css
crossTime-back/: .env  .env.development  .env.production  .env.test  README.md  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vue.config.js
crossTime-back/backdist/: index.html
crossTime-back/backdist/assets/: el-table-column-Cfnn6dV9.css  index-0FTnkzjY.js  index-B4PHszqX.css  index-B5-7dt7r.css  index-BA0qEwvx.js  index-BcnYVmOY.css  index-BedfvGvL.css  index-BgvZQaKC.js  index-CB5aG6OU.js  index-CsucLySy.css  index-CzVMpakp.css  index-CzXZTvIo.js  index-DNyn-Upx.css  index-DPIfXxtw.js  index-Dku0jWkh.js  index-JQp7a7NT.js  index-SrszDxxf.js
crossTime-back/public/: index.html
crossTime-back/src/: App.vue  main.js  main.ts  permisson.ts
crossTime-back/src/api/: admin.ts
crossTime-back/src/layout/: index.vue
crossTime-back/src/plugins/: http.js  request.js
crossTime-back/src/router/: index.js  index.ts  routes.ts
crossTime-back/src/store/: auth.ts
crossTime-back/src/styles/: variable.css  variable.min.css  variable.scss
crossTime-back/test/: 1.html  3.html  scale.html
crossTime-web/: .env  README.md  package-lock.json  package.json  vue.config.js  webpack.config.js
crossTime-web/public/: index.html
crossTime-web/src/: main.js  nprogress.css
前台功能结构/: 前台页面结构.html
(+127 files in other folders)
