CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(logger)

# MESSAGE(WARNING ${CMAKE_CURRENT_SOURCE_DIR})

# 指定库文件生成的位置
SET(LIBRARY_OUTPUT_PATH ${LIBOUT_PATH})

# 搜索源文件
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_LIST)
# 指定头文件所在位置
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


# 生成静态库文件
ADD_LIBRARY(${LOG_LIBNAME} STATIC ${SRC_LIST})